Agregando cambios para compilar en Windows